Avoid touch delay on Android Chrome
Seems to have been caused by having overflowing content trigger a
double-tap to zoom action, even though overflow: hidden was being used.
Fixed by hiding overflowing elements instead of depending on overflow:
hidden (also helps aria?).

Touch delay only occured when table was focused on event, partly why it
wasn't noticed until now.

--- a/src/interpreter/html/style.css
+++ b/src/interpreter/html/style.css
@@ -423,7 +423,6 @@ dd {
   div#subway {
     background: var(--banner-bg-color);
     width: 100%;
-    overflow-x: hidden;
   }
 
   main {
